--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.7.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
